# sdfest

./: .clang-format  .gitattributes  .gitignore  LICENSE  MANIFEST.in  PYPIREADME.md  README.md  final_meshes.json  good_meshes.json  mkdocs.yml  preprocess_shapenet.sh  pyproject.toml  reproduce_modelnet_experiments.sh  reproduce_real275_experiments.sh  reproduce_redwood_experiments.sh  reproduce_shapenet_experiments.sh  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  train_init_networks.sh  train_vaes.sh
.github/workflows/: build_docs.yaml  pytest.yaml
data/redwood_annotations/: annotations.json  apply_fixes.py
docs/: 404.html  gen_ref_pages.py  index.html  index.md  objects.inv  sitemap.xml
docs/search/: search_index.json
ext_eval/: README.md  cass.py  eval.sh  evaluate.py  ias17_figures.py  method_wrappers.py  nocs.py  real275_eval.py  real275_prior.py  redwood_eval.py
ext_eval/asm-net/: cr6d_utils.py
ext_eval/asmnet/: README.md  common3Dfunc.py  cr6d_utils.py  install.sh
ext_eval/cass/: .gitignore  eval.sh
ext_eval/config/: asmnet.yaml  cass.yaml  icaps.yaml  real275.yaml  real275_priors.yaml  redwood.yaml  sdfest.yaml  sdfest_finetuned.yaml  sdfest_prior.yaml  spd.yaml
ext_eval/ias17_obj/: 1.mtl  4.mtl  mug_comparison.blend  mug_comparison.blend1
ext_eval/icaps/: .gitignore  (+9 more)
reproduce_scripts/: preprocess_shapenet.sh  reproduce_modelnet_experiments.sh  reproduce_paper.sh  reproduce_real275_experiments.sh  reproduce_redwood_experiments.sh  reproduce_shapenet_experiments.sh  train_init_networks.sh  train_vaes.sh
reproduction_scripts/: reproduce_paper.sh  train_vaes.sh
sdf_differentiable_renderer/: .gitignore  README.md  setup.py
sdf_estimation/: .gitignore  README.md  requirements-dev.txt  setup.py
sdf_single_shot/: .gitignore  README.md  requirements-dev.txt  setup.py
sdf_vae/: .gitignore  README.md  experiment1.sh  experiment2.sh  setup.cfg  setup.py
sdfest/: utils.py
yoco/: README.md  requirements-dev.txt  setup.py  yoco.py
(+413 files in other folders)
