[tool.poetry]
name = "sdfest"
version = "0.1.0"
description = "Categorical pose and shape estimation using discretized signed distance fields"
authors = ["Leonard Bruns <roym899@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
yoco = {path = "yoco"}
sdf-differentiable-renderer = {path = "sdf_differentiable_renderer"}
sdf-vae = {path = "sdf_vae"}
sdf-single-shot = {path = "sdf_single_shot"}
sdf-estimation = {path = "sdf_estimation"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
