[tool.poetry]
name = "sdfest"
version = "0.1.0"
description = "Categorical pose and shape estimation using discretized signed distance fields"
authors = ["Leonard Bruns <roym899@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
yoco = {path = "yoco", develop = true}
sdf-differentiable-renderer = {path = "sdf_differentiable_renderer", develop = true}
sdf-vae = {path = "sdf_vae", develop = true}
sdf-single-shot = {path = "sdf_single_shot", develop = true}
sdf-estimation = {path = "sdf_estimation", develop = true}
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"
opencv-python = "^4.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
